# pyifcount

./: README.md  main.py  pyproject.toml
misc/: pyifcount.service
src/pycount/: __init__.py  cli.py
src/pyifcount/: __init__.py  cli.py
tests/: conftest.py  pycount_test.py  pyifcount_test.py
tests/pycount/: pycount_test.py  pyifcount_test.py
